# feature_recombination

./: .gitignore  README.md  __init__.py  data.py  data_old.py  eigenlearning.py  feature_decomp.py  gaussianity_and_independence.py  image_data.py  imdata.py  kernels copy.py  kernels.py  mlps.py  notebook_fns  notebook_fns.py  pyproject.toml  tabular_data.py  tools.py  utils copy.py  utils.py
analysis/: gaussianity_tests.py  independence_and_gaussian_tests.py  independence_tests.py  scaling_effects.py  target_fn_decomp.py
expts/: expt_demux.py  hehe_eigenlearning.py  hermite_eigenstructure.py  laplace_finitesz.py  learning_curves.py  mlp_learning.py  monomials.py
feature_recombination/: __init__.py  data.py  feature_decomp.py  image_data.py  kernels.py
notebooks/: Fig1.ipynb  Fig2.ipynb  Fig3.ipynb  MLP-training.ipynb  eigenlearning.ipynb  example_MLP_training.ipynb  fig1-diagram.ipynb  fig2.ipynb  hehe-exponent.ipynb  hehe-fig1.ipynb  hehe-fig2.ipynb  hermite-eigsys.ipynb  laplace-eiglrn.ipynb  laplace-finitesz.ipynb  laplace-kappa.ipynb  learning-curves.ipynb  mlp-training-clo.ipynb  monomials.ipynb  target-recovery.ipynb  verify_level_coeffs.ipynb
plotting/: beta_plotting.py  image_plotting.py  independence_and_gaussian_plotting.py  target_fn_plotting.py
scripts/: eiglrn.sh  eiglrn_monomial.sh  eiglrn_powerlaw.sh  eiglrn_real.sh  eiglrn_superclass.sh  get_spaced_eigvals.py  hehe_eigenlearning.py  hermite_eigstructure.py  laplace_finitesz.py  lrncrv_gkcifar.sh  lrncrv_gksvhn.sh  lrncrv_lapkcifar.sh  mlp_learn_order.py  mlp_learning.py  mlp_learning_curves.py  (+4 more)
(+10 files in other folders)
